--- a/style.css
+++ b/style.css
@@ -4,11 +4,10 @@ html, body {
   background-color: pink;
 }
 
-h1, p {
+h1, h2, p {
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
 }
-
 
 canvas {
   display: block;
